fixed missmatching class and filename